# RGBDVisualOdometry

./: CMakeLists.txt  LICENSE  README.md  RGBDVisualOdometryLib.cmake  package.xml
checkers/: run-clang-format.sh  run-clang-tidy.sh  run-cppcheck.sh
include/: correspondence_estimation_mahalanobis.h  correspondence_estimation_mahalanobis.hpp  correspondence_estimation_mahalanobis_with_descriptor_distances.h  correspondence_estimation_mahalanobis_with_descriptor_distances.hpp  data_cloud_generator.h  environment_model.h  get_param.hpp  icp_mg.h  mg_feature.h  rgbd_visual_odometry.h  rgbd_visual_odometry_node.h  transformation_estimation_translation_only.h  transformation_estimation_translation_only.hpp  transformation_estimator.h
octave/: covariance_icp_point_to_point.m
src/: correspondence_estimation_mahalanobis.cpp  correspondence_estimation_mahalanobis_with_descriptor_distances.cpp  data_cloud_generator.cpp  environment_model.cpp  icp_mg.cpp  mg_feature.cpp  rgbd_visual_odometry.cpp  rgbd_visual_odometry_node.cpp  transformation_estimator.cpp
